--- a/app/themes/default/less/mixins.less
+++ b/app/themes/default/less/mixins.less
@@ -151,7 +151,7 @@
 	border:1px solid #b6b6b6;
 	#gradient > .vertical( #f5f5f5, #ebebeb );
 	.b-shadow(~"inset 0 0 0 2px #ffffff,  0 0 9px 5px rgba(153, 153, 153, 0.12)");
-	z-index:9999;
+	z-index:99999;
 	min-width:110px;
 	display:none;
 	position:absolute;
